--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,11 +26,6 @@ services:
     build: ./bin/mysql
     container_name: "${APP_NAME}_mysql"
     restart: always
-    environment:
-      MYSQL_USER: restapi
-      MYSQL_PASSWORD: restapi
-      MYSQL_DATABASE: restapi
-      MYSQL_ROOT_PASSWORD: restapi
     networks:
       - backend
     ports:
@@ -39,7 +34,7 @@ services:
       - ./mysql:/var/lib/mysql
   redis:
     build: ./bin/redis
-    container_name: '${APP_NAME}_redis'
+    container_name: "${APP_NAME}_redis"
     sysctls:
       net.core.somaxconn: 1024
     networks:
