update docker setup

--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
-APP_NAME=ATK
+APP_NAME=ATKREST
 API_PORT=8888
 MYSQL_PORT=13306
 
-MYSQL_USER: atkrestapi
-MYSQL_PASSWORD: atkrestapi
-MYSQL_DATABASE: atkrestapi
-MYSQL_ROOT_PASSWORD: atkrestapi
+MYSQL_USER=atkrestapi
+MYSQL_PASSWORD=atkrestapi
+MYSQL_DATABASE=atkrestapi
+MYSQL_ROOT_PASSWORD=atkrestapi
+
+USE_XDEBUG=true
